# reg_agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
.claude/: settings.local.json
frontend/: package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/regulations/: page.tsx
frontend/src/app/tasks/: page.tsx
frontend/src/app/tasks/[id]/: page.tsx
frontend/src/lib/: api.ts  types.ts
src/agents/assess/: client.py  prompts.py
src/agents/classify/: client.py  pipeline.py  prompts.py
src/agents/monitor/: federal_register.py  fincen.py  sec.py
src/agents/route/: __init__.py  router.py
src/api/: main.py
src/api/templates/: dashboard.html
src/config/: settings.py
src/database/: __init__.py  client.py  connection.py  schema.sql
src/evaluation/: loader.py  metrics.py  run_eval.py  test_data.json
src/framework/: controls.py
src/models/: __init__.py  document.py
