[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reg-agent"
version = "0.1.0"
description = "Agentic regulatory intelligence system for BSA/AML compliance"
authors = [
    {name = "JR Vickers", email = "jarrett_vickers@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    # AI/ML Framework
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",

    # Database Clients
    "supabase>=2.3.0",
    "asyncpg>=0.29.0",

    # Data Processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",

    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",

    # Task Queue
    "redis>=4.5.0",
    "celery>=5.3.0",

    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",

    # Utilities
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "schedule>=1.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true